--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "transform": {
       "^.+\\.svelte$": "svelte-jester"
     },
-    "transformIgnorePatterns": ["/node_modules/"],
+    "transformIgnorePatterns": [
+      "/node_modules/"
+    ],
     "moduleFileExtensions": [
       "js",
       "svelte"
     ],
-    "extensionsToTreatAsEsm": [".svelte"],
+    "extensionsToTreatAsEsm": [
+      ".svelte"
+    ],
     "setupFilesAfterEnv": [
       "<rootDir>/node_modules/@testing-library/jest-dom"
     ],
@@ -54,5 +58,6 @@
     "start-server-and-test": "^2.0.0",
     "svelte": "^4.2.8",
     "svelte-jester": "^3.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
