--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,15 @@
 name: CI
 
-on: 
+on:
   push:
   pull_request:
   workflow_dispatch:
-  
+    inputs:
+      version:
+        description: "Version tag"
+        required: true
+        type: string
+
 permissions:
   checks: write
   pull-requests: write
@@ -14,25 +19,32 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    # Github actions have Node and Yarn already set-up by default
-    # It is not clear which versions these are, 
-    # so it might be a good idea to specify them via an action like actions/setup-node@v4
-    - uses: actions/checkout@v4
-    - name: Install
-      run: yarn
-    - name: Unit tests
-      run: yarn test
-    - name: Build
-      run: yarn build
-    - name: Integration tests
-      run: yarn test:e2e
+      # Github actions have Node and Yarn already set-up by default
+      # It is not clear which versions these are,
+      # so it might be a good idea to specify them via an action like actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - name: Install
+        run: yarn
+      - name: Unit tests
+        run: yarn test
+      - name: Build
+        run: yarn build
+      - name: Integration tests
+        run: yarn test:e2e
 
-    - name: Publish test results
-      uses: EnricoMi/publish-unit-test-result-action@v2.20.0
-      if: always()
-      with:
-        files: "**/reports/**/*.xml"
+      - name: Tag the working commit
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version != '' }}
+        env:
+          TAG: ${{ github.event.inputs.version }}
+        run: |
+          git tag -a "${TAG}" -m "Release ${TAG}"
+          git push origin "refs/tags/${TAG}"
+
+      - name: Publish test results
+        uses: EnricoMi/publish-unit-test-result-action@v2.20.0
+        if: always()
+        with:
+          files: "**/reports/**/*.xml"
